# spider

./: .dockerignore  .gitignore  1.json  CMakeCache.txt  CMakeLists.txt  DataBaseError.cpp  DataBaseError.hpp  Dockerfile  Makefile  README.md  cmake_install.cmake  config.json  docker-compose.yml  mongo.sh  serverPrivKey.key  serverPubKey.key
cmake/: client.cmake  deps.cmake  module-explorer.cmake  module-file.cmake  module-image.cmake  module-keyboard.cmake  server-deps.cmake  server.cmake
keys/: server.crt  server.key  serverPrivKey.key
libs/SimpleWebServer/: server_http.hpp
sources/: ADataBase.cpp  ADataBase.hpp  AIntervalService.cpp  AIntervalService.hpp  APacketServer.cpp  APacketServer.hpp  AUdpServer.cpp  AUdpServer.hpp  DataBase.hpp  EnumClassHash.hpp  ICrypt.hpp  IDataBase.cpp  IDataBase.hpp  IntervalService.cpp  IntervalService.hpp  LocalDB.cpp  LocalDB.hpp  MapDB.cpp  MapDB.hpp  MongoDB.cpp  MongoDB.hpp  Packet.cpp  Packet.hpp  PacketManager.cpp  PacketManager.hpp  UdpEndpoint.cpp  UdpEndpoint.hpp  json.cpp  json.hpp  main.cpp  tools.hpp
sources/client/: Client.cpp  Client.hpp  CryptClient.cpp  CryptClient.hpp  IModule.hpp  IModuleCommunication.hpp  ModuleCommunication.cpp  ModuleCommunication.hpp  ModuleManager.cpp  ModuleManager.hpp  UdpClient.cpp  UdpClient.hpp  WinTools.cpp  WinTools.hpp  main.cpp  main_startup.cpp
sources/client/modules/: ModuleExplorer.cpp  ModuleExplorer.hpp  ModuleFile.cpp  ModuleFile.hpp  ModuleImage.cpp  ModuleImage.hpp  ModuleKeyboard.cpp  ModuleKeyboard.hpp  main.cpp  modules.pro
sources/server/: AUdpServer.cpp  AUdpServer.hpp  CryptServer.cpp  CryptServer.hpp  HttpServer.cpp  HttpServer.hpp  HttpsRestApi.cpp  MongoDB.cpp  MongoDB.hpp  Server.cpp  Server.hpp  ServerCrypt.cpp  ServerCrypt.hpp  https_examples.cpp  main.cpp
sources/server/db_gestion/: MongoDB.cpp  db_gestion.cpp  db_test.cpp  main.cpp  main.cpp~  myjson.json  test  test.cpp
sources/server/db_gestion/includes/: IDataBase.hpp  MongoDB.hpp  db_gestion.hpp
sources/server/db_gestion/lib/: main.cpp  test
sources/server/db_gestion/lib/include/libmongoc-1.0/: mongoc-config.h
sources/server/db_gestion/lib/lib/: libbsoncxx.so.3.1.3  libbsoncxx.so._noabi  libmongoc-1.0.la  libmongoc-1.0.so.0.0.0  libmongocxx.so.3.1.3  libmongocxx.so._noabi
sources/server/db_gestion/lib/lib/cmake/libmongoc-1.0/: libmongoc-1.0-config.cmake
sources/server/db_gestion/lib/lib/cmake/libmongoc-static-1.0/: libmongoc-static-1.0-config.cmake
sources/server/db_gestion/lib/lib/pkgconfig/: libbsoncxx.pc  libmongoc-1.0.pc  libmongoc-ssl-1.0.pc  libmongoc-static-1.0.pc  libmongocxx.pc
sources/server/db_gestion/sand_box/: #main.cpp#  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile~  cmake_install.cmake  compile.txt  main.cpp  main.cpp~  myjson2.json  myjson3.json  test_mgDBcXXX
sources/server/db_gestion/sand_box/mongo-cxx-driver-r3.1.3/examples/bsoncxx/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/server/db_gestion/sand_box/mongo-cxx-driver-r3.1.3/examples/mongocxx/: CMakeCache.txt  Makefile  cmake_install.cmake
sources/ssl/: Base64.cpp  Base64.hpp  CryptAES.cpp  CryptAES.hpp  CryptRSA.cpp  CryptRSA.hpp  ICrypt.hpp  ICryptAlgo.hpp  applink.c  ssl.cpp
web/: index.html
web/js/: script.js
